java9: Avoid Class.newInstance deprecation warning
Replace with Class.getConstructor().newInstance().

Signed-off-by: BJ Hargrave <bj@bjhargrave.com>