@@ -226,7 +226,7 @@ public class Configurable<T> {
 				}
 
 				@SuppressWarnings("unchecked")
-				Collection<Object> result = (Collection<Object>) resultType.newInstance();
+				Collection<Object> result = (Collection<Object>) resultType.getConstructor().newInstance();
 				Type componentType = pType.getActualTypeArguments()[0];
 
 				for (Object i : input) {
@@ -248,7 +248,7 @@ public class Configurable<T> {
 								"Unknown interface for a collection, no concrete class found: " + resultType);
 				}
 				@SuppressWarnings("unchecked")
-				Map<Object,Object> result = (Map<Object,Object>) resultType.newInstance();
+				Map<Object,Object> result = (Map<Object,Object>) resultType.getConstructor().newInstance();
 				Type keyType = pType.getActualTypeArguments()[0];
 				Type valueType = pType.getActualTypeArguments()[1];
 
