@@ -64,7 +64,7 @@ public class CollectionHandler extends Handler {
 	@Override
 	public Object decodeArray(Decoder r) throws Exception {
 		@SuppressWarnings("unchecked")
-		Collection<Object> c = (Collection<Object>) rawClass.newInstance();
+		Collection<Object> c = (Collection<Object>) rawClass.getConstructor().newInstance();
 		r.codec.parseArray(c, componentType, r);
 		return c;
 	}
