@@ -696,7 +696,7 @@ public class Processor extends Domain implements Reporter, Registry, Constants, 
 	private Object loadPlugin(ClassLoader loader, Attrs attrs, String className, boolean ignoreError) {
 		try {
 			Class< ? > c = loader.loadClass(className);
-			Object plugin = c.newInstance();
+			Object plugin = c.getConstructor().newInstance();
 			customize(plugin, attrs);
 			if (plugin instanceof Closeable) {
 				addClose((Closeable) plugin);
